# ezee

./: Cargo.toml  readme.md
chat-cli/: Cargo.toml
chat-cli/src/: main.rs
chat-core/: Cargo.toml
chat-core/src/: lib.rs
chat-core/src/auth/: mod.rs
chat-core/src/crypto/: encrypt.rs  error.rs  keys.rs  mod.rs
