[package]
name = "chat-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
serde = { version = "1", features=["derive"] }
bincode = "1"
zeroize = { version = "1", features = ["derive"] }
chacha20poly1305 = "0.10"